# tlg_reply_bot

./: .flake8  .gitignore  pyproject.toml  setup.cfg
src/: bot.py  run_bot.py
src/constants/: reply.py
src/core/: config.py
